--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  text-align: left;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #b1b0af;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(5, 5, 5);
+  padding: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header img {
+  width: 75px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table {
+  width: 100%;
+}
+
+.table td {
+  border: .5px solid #ddd;
+  padding: 8px;
+}
+
+.table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: #b1b0af;
+  color: rgb(8, 8, 8);
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.table img {
+  width: 35px;
+}
+
+.search {
+  width: 250px;
+  height: 25px;
+  text-align: left;
+  margin: 20px;
+}
+
+.line-code img{
+  width: 20px;
+}
+
+.service-type img {
+  width: 20px;
+  margin-bottom: 2px;
+  margin-left: 2px;
 }
