--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: left;
+  text-align: center;
 }
 
 .App-header {
@@ -20,7 +20,7 @@
   width: 100%;
 }
 
-.table td {
+.table td, th{
   border: .5px solid #ddd;
   padding: 8px;
 }
@@ -28,9 +28,8 @@
 .table th {
   padding-top: 12px;
   padding-bottom: 12px;
-  background-color: #b1b0af;
+  background-color: #f1f1f0;
   color: rgb(8, 8, 8);
-  border: 1px solid #ddd;
   padding: 8px;
 }
 
@@ -42,7 +41,15 @@
   width: 250px;
   height: 25px;
   text-align: left;
-  margin: 20px;
+  margin-bottom: 10px;;
+}
+
+.search-input {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: #b1b0af;
+  padding-bottom: 10px;
 }
 
 .line-code img{
@@ -50,7 +57,11 @@
 }
 
 .service-type img {
-  width: 20px;
-  margin-bottom: 2px;
-  margin-left: 2px;
+  width: 15px;
+  padding-left: 2px;
+}
+
+.car-count img {
+  width: 60px;
+  margin-left: 10px;
 }
